--- a/Clase24/views/layouts/main.hbs
+++ b/Clase24/views/layouts/main.hbs
@@ -10,6 +10,7 @@
     />
     <title>Tienda Gammer euhaN</title>
   </head>
+  </head>
   <body class="container">
     {{> header}}
     <img src="https://firebasestorage.googleapis.com/v0/b/pichuninuni.appspot.com/o/logo2.png?alt=media&token=8b9c12e5-c409-4723-9dd8-e17ceec74276" class="rounded mx-auto d-block img-fluid" alt="logo">
